// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles various attributes, invalid attributes, and character types in <a> tags appropriately and nested tags in <a> tags 1`] = `
<div>
  <p>
    At vero eos et accusamus et iusto odio dignissimos ducimus qui 
    <a
      class="overlay-source"
      href="https://www.google.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      blanditiis praesentium
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </a>
     voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
  </p>
   
  <ul>
     
    <li>
      Et harum quidem rerum facilis 
      <a
        href="https://www.google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        est et expedita
        <span
          class="sr-only"
        >
           (Opens in a new tab)
        </span>
        <span
          class="svg-icon inline-flex align-middle w-em h-em ml-1"
        >
          <svg
            height="48"
            version="1.1"
            viewBox="0, 0, 48, 48"
            width="48"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            y="0"
          >
            <path
              d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
       distinctio.
    </li>
     
    <li>
      Nam libero tempore, cum soluta nobis est eligendi optio cumque.
    </li>
     
  </ul>
   
  <p>
    Nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et

  </p>
  <p>
    voluptatum

    <a
      href="adfdf"
      rel="adfd"
      target="_blank"
    >
      molestiae non recusandae
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </a>
    .
  </p>
  

  <a
    bb="dafa"
    crazy="crazy"
    target="_blank"
  >
    foobar 
    <span>
      foobar
    </span>
    &lt;&gt;&lt;&gt;&lt;&gt;&lt;&gt;&gt;&gt;&gt;&gt;&gt;&lt;&lt;&lt;#*)#(*Q$)JALKJFLKJALKSFJ
    <span
      class="sr-only"
    >
       (Opens in a new tab)
    </span>
    <span
      class="svg-icon inline-flex align-middle w-em h-em ml-1"
    >
      <svg
        height="48"
        version="1.1"
        viewBox="0, 0, 48, 48"
        width="48"
        x="0"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0"
      >
        <path
          d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
          fill="currentColor"
        />
      </svg>
    </span>
  </a>
  

  <a
    bb="lakdfjl"
    target="_blank"
    zz="adlkfjalaldkfj"
  >
    <span
      class="sr-only"
    >
       (Opens in a new tab)
    </span>
    <span
      class="svg-icon inline-flex align-middle w-em h-em ml-1"
    >
      <svg
        height="48"
        version="1.1"
        viewBox="0, 0, 48, 48"
        width="48"
        x="0"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0"
      >
        <path
          d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
          fill="currentColor"
        />
      </svg>
    </span>
  </a>
  

  <a
    bb="lakdfjl"
    data-foo="adlkfjalaldkfj"
    target="_blank"
  >
    adfadfadf 
    <span>
      afadfd
    </span>
    <span
      class="sr-only"
    >
       (Opens in a new tab)
    </span>
    <span
      class="svg-icon inline-flex align-middle w-em h-em ml-1"
    >
      <svg
        height="48"
        version="1.1"
        viewBox="0, 0, 48, 48"
        width="48"
        x="0"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0"
      >
        <path
          d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
          fill="currentColor"
        />
      </svg>
    </span>
  </a>
  

  <a
    dababd="zzzz"
    target="_blank"
  >
    <span
      class="sr-only"
    >
       (Opens in a new tab)
    </span>
    <span
      class="svg-icon inline-flex align-middle w-em h-em ml-1"
    >
      <svg
        height="48"
        version="1.1"
        viewBox="0, 0, 48, 48"
        width="48"
        x="0"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0"
      >
        <path
          d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
          fill="currentColor"
        />
      </svg>
    </span>
  </a>
  

  <a
    dababd="zzzz"
  />
  

  <a
    11111="zzzz"
    target="_blank"
  >
    <span
      class="sr-only"
    >
       (Opens in a new tab)
    </span>
    <span
      class="svg-icon inline-flex align-middle w-em h-em ml-1"
    >
      <svg
        height="48"
        version="1.1"
        viewBox="0, 0, 48, 48"
        width="48"
        x="0"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0"
      >
        <path
          d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
          fill="currentColor"
        />
      </svg>
    </span>
  </a>
  

  <a
    #%%#)(*)(%*="zzz"
    target="_blank"
  >
    <div>
      foobarbaz
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </a>
  

  <a
    #%%#)(*)(%*="zzz"
    target="_blank"
  >
    

    <div>
      foobarbaz
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    

  </a>
  <a
    #%%#)(*)(%*="zzz"
  >
    

    <div>
      foobarbaz
    </div>
    

  </a>
  <a
    #%%#)(*)(%*="zzz"
    target="_blank"
  >
    

    <div>
      foobarbaz
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    

  </a>
  
Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
  <p />
  -
</div>
`;

exports[`renders common usage correctly 1`] = `
<div>
  <p>
    At vero eos et accusamus et iusto odio dignissimos ducimus qui 
    <a
      class="overlay-source"
      href="https://www.google.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      blanditiis praesentium
      <span
        class="sr-only"
      >
         (Opens in a new tab)
      </span>
      <span
        class="svg-icon inline-flex align-middle w-em h-em ml-1"
      >
        <svg
          height="48"
          version="1.1"
          viewBox="0, 0, 48, 48"
          width="48"
          x="0"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
          y="0"
        >
          <path
            d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
            fill="currentColor"
          />
        </svg>
      </span>
    </a>
     voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
  </p>
   
  <ul>
     
    <li>
      Et harum quidem rerum facilis 
      <a
        href="https://www.google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        est et expedita
        <span
          class="sr-only"
        >
           (Opens in a new tab)
        </span>
        <span
          class="svg-icon inline-flex align-middle w-em h-em ml-1"
        >
          <svg
            height="48"
            version="1.1"
            viewBox="0, 0, 48, 48"
            width="48"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            y="0"
          >
            <path
              d="M19.617,13.401 L19.594,17.697 L10.925,17.697 L10.925,35.793 L29.021,35.793 L29.021,26.281 L33.33,26.269 L33.316,40.088 L6.629,40.088 L6.629,13.401 L19.617,13.401 z M21.914,5.912 L22.008,9.725 L34.219,10.026 L18.268,25.924 L21.031,28.688 L37.243,12.528 L37.558,25.274 L41.371,25.368 L40.902,6.385 L40.898,6.385 L40.898,6.38 L21.914,5.912 z"
              fill="currentColor"
            />
          </svg>
        </span>
      </a>
       distinctio.
    </li>
     
    <li>
      Nam libero tempore, cum soluta nobis est eligendi optio cumque.
    </li>
     
  </ul>
   
  <p>
    Nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et 
    <a
      href="https://www.google.com"
    >
      molestiae non recusandae
    </a>
    . Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
  </p>
</div>
`;
